删除无用代码

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>cn</title>
+    <title>Spreadjs Designer</title>
   </head>
   <body>
     <div id="apps"></div>
